# CryptoHLS

./: CMakeLists.txt  aes_hls_dataset.jsonl  aes_nodes.csv  bak-hls_dataset.jsonl  commands.txt  error.txt  eval_predict.py  eval_results.csv  train_hidden_256.py  train_lr_low.py
include/: Core.h
libs/AST/: CMakeLists.txt  DesignSpaceVisitor.cpp  DesignSpaceVisitor.h  PragmaInserter.cpp  PragmaInserter.h
libs/Analysis/: AnalysisPasses.cpp  AnalysisPasses.h  CMakeLists.txt
libs/DSE/: CMakeLists.txt  DSE.cpp  DSE.h
libs/GraphExtractor/: CMakeLists.txt  GraphExtractor.cpp  GraphExtractor.h
libs/IR/: CMakeLists.txt  IRAnalyzer.cpp  IRAnalyzer.h
libs/IRGenerator/: CMakeLists.txt  IRGenerator.cpp  IRGenerator.h
libs/ModelDeploy/scripts/: active_select.py  clean_dataset.py  feat_baseline.py  gnn_dataset.py  gnn_model.py  hls_runner.py  ppa_predictor_model_enhanced.pth  ppa_scaler.pkl  predict.py  predict_baseline.py  split_by_program.py  train.py
libs/ModelDeploy/scripts/processed/: data_0.pt  data_1.pt  data_10.pt  data_100.pt  data_1000.pt  data_1001.pt  data_1002.pt  data_1003.pt  data_1004.pt  data_1005.pt  data_1006.pt  data_1007.pt  data_1008.pt  data_1009.pt  data_101.pt  data_1010.pt  data_1011.pt  data_1012.pt  data_1013.pt  data_1014.pt  data_1015.pt  data_1016.pt  data_1017.pt  data_1018.pt  data_1019.pt  data_102.pt  data_1020.pt  data_1021.pt  data_1022.pt  data_1023.pt  data_1024.pt  data_1025.pt  data_1026.pt  data_1027.pt  data_1028.pt  data_1029.pt  data_103.pt  data_1030.pt  data_1031.pt  data_1032.pt  (+9090 more)
processed/: data_0.pt  data_1.pt  data_2.pt  data_3.pt  data_4.pt  data_5.pt
runs/gnn/: ckpt_clean_gpu.pth  ckpt_clean_gpu_v2.pth  ckpt_clean_gpu_v3.pth  sanity_ckpt_gpu.pth  sanity_ckpt_gpu_scaler.pkl  val_pred_vs_true_clean_gpu.csv  val_pred_vs_true_sanity_gpu.csv
scripts/: hls_compare.py  hls_runner.py
src/: main.cpp
test/: a.out  aes_raw.cpp  aes_raw.optimized.cpp  aes_raw.optimized.final.cpp  aes_tb.cpp  sha1_raw.cpp  sha256_raw.cpp  sm3_raw.cpp  test.ll  test_input.cpp  test_input.optimized.cpp
tmp_hls_smoke_497602/: run_hls.tcl
tmp_hls_smoke_debug/: hls.app  run_hls.tcl
tmp_hls_smoke_debug/solution1/: solution1.aps  solution1.directive  solution1_data.json
tmp_hls_smoke_debug/solution1/.autopilot/: .autopilot_exit
tmp_hls_smoke_debug/solution1/.autopilot/db/: .message_syn.xml  a.g.2.bc  a.g.2.prechk.bc  a.g.ld.0.bc  a.pp.bc  (+113 more)
vitis_tcl/: run_syn.tcl
vitis_tcl/verification_project/: hls.app
vitis_tcl/verification_project/solution1/: solution1.aps
(+25 files in other folders)
